2018-02-26  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/local-security.c: Do not call initgroups since we are no
	  longer suid root

2018-02-23  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: s/g_free/amfree/ for sp->try_again_message

2018-02-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/sendbackup-dump.c, client-src/sendbackup-gnutar.c,
	  client-src/sendbackup.c: Fix fd managment

2018-02-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2/log.pm (get_dumps, get_parts): Return ref to
	  the array
	* installcheck/Amanda_DB_Catalog2_log.pl: Fix

2018-02-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Changer/disk.pm: Make slot dit with permission 0700

2018-02-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/protocol.c (protocol_sendreq): Cache the result of
	  get_platform_and_distro, calling it for each request take too much
	  time

2018-02-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_DB_Catalog2_PgSQL.pl: Reorder check

2018-02-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2/SQL.pm: Fix compatibility issue

2018-02-07  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/amvault.pl, installcheck/taper.pl: Fix count if
	  compiled with --without-ndmp

2018-02-07  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2/SQL.pm: Do not keep DROP prepared statement

2018-02-07  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_DB_Catalog2_MySQL.pl: Reorder check
	* perl/Amanda/DB/Catalog2/SQL.pm: Fix CREATE statement

2018-02-07  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/taper.pl: Fix

2018-02-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/cmdfile.c (free_cmddata): Do not declare static
	* server-src/cmdfile.h (free_cmddata): Add prototype
	* client-src/client_util.c, common-src/pipespawn.c